| Summary: | ASTERISK-17812: [patch] Missing calls to PQclear | ||
| Reporter: | Byron Clark (byronclark) | Labels: | |
| Date Opened: | 2011-05-05 15:30:56 | Date Closed: | 2011-07-26 13:04:16 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_config_pgsql |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ( 0) pgsql_pqclear.patch | |
| Description: | There are some code paths in res_config_pgsql that fail to call PQclear. Most of the code paths are in error cases, so this is a minor issue. The attached patch (against 1.8 svn) ensures that PQclear is called when needed. It looks like there are still a couple of instances where this may be needed on trunk. | ||
| Comments: | By: Byron Clark (byronclark) 2011-07-26 10:16:19.839-0500 It appears this was resolved on the 1.8 branch in r323610, but the commit never made it to JIRA to close the issue. By: Jonathan Rose (jrose) 2011-07-26 13:04:16.636-0500 Closed back on June 15 via clone. | ||