Adds PQclear calls on result to various parts of res_conf_pgsql

(closes issue ASTERISK-17812)
Reported by: byronclark
Patches: 
      pgsql_pqclear.patch uploaded by byronclark (license 1200)


git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/1.8@323610 65c4cc65-6c06-0410-ace0-fbb531ad65f3